--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   responsive_framework: ^1.4.0
   font_awesome_flutter: ^10.7.0
   fluttericon: ^2.0.0
+  syncfusion_flutter_datagrid: ^25.1.37
+  flutter_staggered_grid_view: ^0.7.0
+  shamsi_date: ^1.0.2
 
 dev_dependencies:
   flutter_test:
