--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   shamsi_date: ^1.0.2
   cached_network_image: ^3.3.1
+  go_router: ^14.1.4
 
 dev_dependencies:
   flutter_test:
