--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shamsi_date: ^1.0.2
   cached_network_image: ^3.3.1
   go_router: ^14.1.4
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,7 @@ flutter:
     - assets/images/profile.jpg
     - assets/images/profile_main.jpg
     - assets/images/man.png
+    - assets/lottie/not_found.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
