--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   cached_network_image: ^3.3.1
   go_router: ^14.1.4
   lottie: ^3.1.2
+  flutter_bloc: ^8.1.5
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
