--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   lottie: ^3.1.2
   flutter_bloc: ^8.1.5
   bloc: ^8.1.4
+  get_it: ^7.7.0
+  shared_preferences: ^2.2.3
+  dio: ^5.4.3+1
+  toastification: ^2.0.0
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
