--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dio: ^5.4.3+1
   toastification: ^2.0.0
   flutter_spinkit: ^5.2.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
