--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   toastification: ^2.0.0
   flutter_spinkit: ^5.2.1
   shimmer: ^3.0.0
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
