--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  responsive_framework: ^1.4.0
   font_awesome_flutter: ^10.7.0
   fluttericon: ^2.0.0
-  syncfusion_flutter_datagrid: ^25.1.38
+  syncfusion_flutter_datagrid: ^26.1.41
   flutter_staggered_grid_view: ^0.7.0
   shamsi_date: ^1.0.2
   go_router: ^14.1.4
@@ -56,6 +55,14 @@ dependencies:
   url_strategy: ^0.2.0
   dotted_border: ^2.1.0
   file_picker: ^8.0.5
+  infinite_scroll_pagination: ^4.0.0
+  dropdown_button2: ^2.3.9
+  syncfusion_flutter_datepicker: ^26.1.41
+  intl: ^0.19.0
+  cross_file: ^0.3.4+1
+  video_player: ^2.9.1
+  video_player_win: ^2.3.9
+#  isolate_manager: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +93,8 @@ flutter:
     - assets/lottie/login.json
     - assets/images/upload_image_dark.png
     - assets/images/upload_image_light.png
+    - assets/images/upload_video_dark.png
+    - assets/images/upload_video_light.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -99,12 +108,6 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: sans
-       fonts:
-         - asset: assets/fonts/Sans_Regular.ttf
-     - family: yekan
-       fonts:
-         - asset: assets/fonts/Yekan.ttf
      - family: iran-sans
        fonts:
          - asset: assets/fonts/IRANSans.ttf
