--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   cross_file: ^0.3.4+1
   video_player: ^2.9.1
   video_player_win: ^2.3.9
+  flutter_svg: ^2.0.10+1
+  vector_graphics_compiler: ^1.1.11+1
+#  better_player: ^0.0.84
 #  isolate_manager: ^5.1.0
 
 dev_dependencies:
@@ -95,6 +98,8 @@ flutter:
     - assets/images/upload_image_light.png
     - assets/images/upload_video_dark.png
     - assets/images/upload_video_light.png
+    - assets/svg/collection.svg
+    - assets/svg/collection.svg.vec
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
