--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   vector_graphics_compiler: ^1.1.11+1
   format: ^1.5.2
+  fc_native_video_thumbnail: ^0.11.1
+  path_provider: ^2.1.4
 #  better_player: ^0.0.84
 #  isolate_manager: ^5.1.0
 
