--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,14 +60,13 @@ dependencies:
   syncfusion_flutter_datepicker: ^26.1.41
   intl: ^0.19.0
   cross_file: ^0.3.4+1
-  video_player: ^2.9.1
-  video_player_win: ^2.3.9
   flutter_svg: ^2.0.10+1
   vector_graphics_compiler: ^1.1.11+1
   format: ^1.5.2
   fc_native_video_thumbnail: ^0.11.1
   path_provider: ^2.1.4
   flutter_animate: ^4.5.0
+  ffmpeg_helper: ^1.0.1
 #  better_player: ^0.0.84
 #  isolate_manager: ^5.1.0
 
